gtk-4.0/gtk.css
.background {
  color: #000000;
  background-color: rgba(245, 245, 245, 0.999); }
  .background:backdrop {
    color: #8C8C8C;
    background-color: rgba(248, 248, 248, 0.999); }

dnd {
  color: #000000; }

.normal-icons {
  -gtk-icon-size: 16px; }

.large-icons {
  -gtk-icon-size: 32px; }

image:disabled {
  -gtk-icon-filter: opacity(0.5); }

.view, iconview {
  color: #000000;
  background-color: #FFFFFF; }
  .view:disabled, iconview:disabled {
    color: #7b7b7b;
    background-color: #e9e9e9; }
  .view:selected:focus, .view:selected, iconview:selected {
    color: #FFFFFF;
    background-color: #3B82D6;
    border-radius: 3px; }
  .view:selected:backdrop, iconview:selected:backdrop {
    color: #707070;
    background-color: #aeaeae; }

textview > text {
  color: #000000;
  background-color: #FFFFFF;
  background-color: transparent; }
  textview > text:disabled {
    color: #7b7b7b;
    background-color: #7b7b7b; }
  textview > text:selected:focus, textview > text:selected {
    color: #FFFFFF;
    background-color: #3B82D6; }
  textview > text:selected:backdrop {
    color: #FFFFFF;
    background-color: #3B82D6; }
  textview > text > selection {
    color: #FFFFFF;
    background-color: #3B82D6; }
    textview > text > selection:focus-within {
      color: #FFFFFF;
      background-color: #3B82D6; }

textview:drop(active) {
  caret-color: #3B82D6; }

iconview:drop(active) {
  box-shadow: none; }

iconview > dndtarget:drop(active) {
  border: 1px solid #3B82D6; }

rubberband {
  border: 1px solid #3375c3;
  background-color: rgba(59, 130, 214, 0.3); }

flowbox > rubberband {
  border: 1px solid #3375c3;
  background-color: rgba(59, 130, 214, 0.3); }

flowbox > flowboxchild {
  padding: 3px; }
  flowbox > flowboxchild:selected {
    color: #FFFFFF;
    background-color: #3B82D6; }

gridview > rubberband {
  border: 1px solid #3375c3;
  background-color: rgba(59, 130, 214, 0.3); }

gridview > child {
  padding: 3px;
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  gridview > child:selected {
    color: #FFFFFF;
    background-color: #3B82D6; }
    gridview > child:selected:backdrop {
      color: #707070;
      background-color: #aeaeae; }
  gridview > child box {
    border-spacing: 8px;
    margin: 12px; }

coverflow cover {
  color: #000000;
  background-color: #FFFFFF;
  border: 1px solid #848484; }

label:selected {
  color: #FFFFFF; }

label > selection {
  color: #FFFFFF;
  background-color: #3B82D6; }
  label > selection:focus-within {
    color: #FFFFFF;
    background-color: #3B82D6; }

label:disabled {
  color: #7b7b7b; }
  button label:disabled {
    color: inherit; }
  label:disabled > selection {
    color: #5b7ea8; }
    label:disabled > selection:backdrop {
      color: #799dc7; }

label.error {
  color: #CC0000; }
  label.error:disabled {
    color: rgba(204, 0, 0, 0.5); }

.dim-label {
  opacity: 0.6;
  text-shadow: none; }

button {
  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  button:backdrop {
    transition: 200ms ease-out; }
  button.flat {
    transition: none; }
    button.flat:hover, button.flat:checked {
      transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

entry {
  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  entry:focus {
    transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

flowbox > flowboxchild {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

gridview > child {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

searchbar > revealer > box:backdrop {
  transition: 200ms ease-out; }

headerbar:backdrop {
  transition: 200ms ease-out; }

treeview > header > button, treeview > header > button:hover, treeview > header > button:active {
  transition: none; }

treeview > header > button button.dnd:active, treeview > header > button button.dnd:selected, treeview > header > button button.dnd:hover, treeview > header > button button.dnd, treeview > header > button header.button.dnd:active, treeview > header > button header.button.dnd:selected, treeview > header > button header.button.dnd:hover, treeview > header > button header.button.dnd {
  transition: none; }

popover.menu box.inline-buttons button.image-button.model {
  transition: none; }

notebook > header > tabs > tab {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

scrollbar {
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  scrollbar:backdrop {
    transition: 200ms ease-out; }
  scrollbar > range > trough > slider {
    transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  scrollbar > range.fine-tune > trough > slider {
    transition: none; }

switch {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  switch > slider {
    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

.view.content-view.check:not(list), iconview.content-view.check:not(list),
.content-view .tile check:not(list) {
  transition: 200ms; }

checkbutton {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }

scale > through {
  transition: outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94), outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
  scale > through > slider {
    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
    transition-property: background, border, box-shadow; }

placesview .server-list-button > image,
placesview .server-list-button:checked > image {
  transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
/* ... */

